@startuml school management system ERD

entity "User" {
  * userID: INT
  * username: VARCHAR
  * password: VARCHAR
  * email: VARCHAR
  * firstName: VARCHAR
  * lastName: VARCHAR
  * fullName: VARCHAR
  * dateOfBirth: DATE
  * fingerprint: BLOB
  * userReport: TEXT
  * userLog: TEXT
}

entity "Student" {
  * studentID: INT
  * studentSection: VARCHAR
  * studentGrade: VARCHAR
  * studentClass: VARCHAR
  * studentReport: TEXT
}

entity "Teacher" {
  * teacherID: INT
  * gradeValue: VARCHAR
  * teacherSubjects: VARCHAR
  * teacherClass: VARCHAR
  * teacherSection: VARCHAR
  * teacherReport: TEXT
}

entity "SectionalHead" {
  * section: VARCHAR
  * sectionalHeadReport: TEXT
}

entity "Principal" {
  * principalType: VARCHAR
  * principalReport: TEXT
}

entity "Admin" {
  * adminID: INT
  * adminType: VARCHAR
  * adminReport: TEXT
  * adminLog: TEXT
}

entity "Section" {
  * section: VARCHAR
  * sectionalHead: VARCHAR
  * sectionReport: TEXT
  * sectionLog: TEXT
}

entity "Class" {
  * class: VARCHAR
  * classTeacher: VARCHAR
  * classMonitor: VARCHAR
  * classReport: TEXT
  * classLog: TEXT
}

entity "TimeTable" {
  * timeTableID: INT
  * timeTableClass: VARCHAR
  * timeTableTeacher: VARCHAR
  * timeTableSection: VARCHAR
}

entity "Exam" {
  * id: INT
  * name: VARCHAR
  * type: VARCHAR
  * description: TEXT
  * date: DATE
  * duration: TIME
  * medium: VARCHAR
}

entity "Result" {
  * id: INT
  * studentName: VARCHAR
  * marks: INT
  * grade: VARCHAR
  * updateDate: DATE
}

entity "Assessment" {
  * id: INT
  * title: VARCHAR
  * description: TEXT
  * attachedFiles: BLOB
  * dueDate: DATE
  * medium: VARCHAR
}

entity "Submission" {
  * id: INT
  * content: TEXT
  * attachedFiles: BLOB
  * submissionDate: DATE
  * submissionTime: TIME
  * marks: INT
  * grade: VARCHAR
}

entity "Subject" {
  * subjectName: VARCHAR
  * subjectContent: TEXT
  * creditPoints: INT
  * hours: INT
}

User --|> Student
User --|> Teacher
Teacher --|> SectionalHead
SectionalHead --|> Principal
Principal --|> Admin

Section "1" -- "1..*" Teacher
Section "1" -- "1..*" Class
Section "1" -- "1..*" Subject
Section "1" -- "1..*" Exam
Class "1" -- "1..*" Student
Class "1" -- "1" TimeTable
Assessment "1" -- "0..*" Submission
Assessment "1" -- "1" Subject
Exam "1" -- "0..*" Result
Exam "1" -- "1..*" Subject
Result "1" -- "1" Subject
Admin "1" -- "1..*" User
Principal "1" -- "1..*" SectionalHead
SectionalHead "1" -- "1" Section
SectionalHead "1" -- "1..*" Teacher
Teacher "1" -- "0..1" Class
Teacher "1" -- "1..*" Subject
Teacher "1" -- "1..*" Assessment
Teacher "1" -- "1..*" Submission
Teacher "1" -- "1..*" Exam
Teacher "1" -- "1..*" Student
Student "1" -- "1..*" Subject
Student "1" -- "1..*" Exam
Student "1" -- "0..*" Result
Student "1" -- "0..*" Assessment

@enduml